@@ -381,11 +381,11 @@ THEGLO
  EVB        g_intevb[NUM_IEVBS];
 
  BYTE       g_scrap[LEN_ZPATH];         /* current scrap directory */
- BYTE       *g_dir;
- BYTE       g_dta[44];                  /* AES's DTA */
  BYTE       s_cdir[LEN_ZPATH];          /* current desktop directory */
  BYTE       s_cmd[LEN_ZPATH+LEN_ZFNAME+1];  /* fully-qualified program name */
-
+ BYTE       g_dir[LEN_ZPATH+LEN_ZFNAME+1];  /* sh_find() work area */
+ BYTE       g_dta[44];                  /* AES's DTA */
+ 
  FPD        g_fpdx[NFORKS];
  ORECT      g_olist[NUM_ORECT];
 
