@@ -5438,3 +5438,4 @@ Start... early ages
 - aes/geminit.c aes/gemlib.h: Move DTA to THEGLO. (RFB)
 - aes/geminit.c aes/gemlib.h: Move desktop directory to THEGLO. (RFB)
 - aes/geminit.c aes/gemlib.h: Move program name to THEGLO. (RFB)
+- aes/geminit.c aes/gemlib.h: Move sh_find() work area to THEGLO. (RFB)
